--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">Raine Collins</div>
+      <div class="logo">Raine Loves Code</div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
