Completed hamburger menu

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">Raine Collins</div>
+      <div class="logo">Raine Loves Code</div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
