--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Raine Loves Code</title>
+    <title>Raine Loves Code!</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
@@ -56,7 +56,8 @@
           <button
             class="btn btn-color-1"
             onclick="location.href=('./#contact')"
-          >Contact Info
+          >
+            Contact Info
           </button>
         </div>
       </div>
